# barber_ease

./: .gitignore  Procfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  seed.py  setup_frontend
alembic/: env.py
alembic/versions/: 2546d28607e3_initial_migration.py  3c1c182b0dc2_initial_migration.py  667f89059565_initial_migration.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: BookingModal.tsx  Navbar.tsx  ProtectedRoute.tsx  ReviewModal.tsx
client/src/contexts/: AuthContext.tsx
client/src/lib/: api.ts
client/src/pages/: Appointments.tsx  BarberProfile.tsx  Barbers.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Profile.tsx  Register.tsx
migrations/versions/: ac59abdafab9_initial_migration.py
